projects/compiler/test/parser/typedecl_error_bad_trait.3.out
Error at %FILE_NAME%:1:18
Unexpected token '(', expected 'identifier':
  |  type FooBar123 : (Foo) => Bar {
                      ^