projects/compiler/test/parser/typedecl_error_bad_trait.3.abra
type FooBar123 : (Foo) => Bar {

}
